feat: add JWT security and login